# vrc_worlds_manager

./: .zed  LICENSE  README.ja.md  README.md
bridge/: Cargo.toml  readme.md
bridge/src/: main.rs
chrome_extension/: package-lock.json  package.json  tsconfig.json  webpack.config.js
chrome_extension/src/: background.ts  content-script.ts  manifest.json  messagingType.ts  nativeMessaging.ts  nativeMessagingType.ts
chrome_extension/src/content-scripts/: background.ts  home.ts  world.ts
world_manager/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
world_manager/src/: App.tsx  main.tsx  styles.css
world_manager/src-tauri/: Cargo.toml  tauri.conf.json
world_manager/src-tauri/.cargo/: config.toml
world_manager/src-tauri/capabilities/: default.json
world_manager/src-tauri/src/: commands.rs  config.rs  db.rs  discord_bot.rs  ipc.rs  lib.rs  log_watcher.rs  main.rs
world_manager/src-tauri/src/db/: discord.rs  log_files.rs  tag_groups.rs  tags.rs  worlds.rs
world_manager/src-tauri/src/discord_bot/: http.rs
world_manager/src/components/ui/: command.tsx
world_manager/src/models/: db.ts
world_manager/src/types/: config.ts  discord.ts  tags.ts  world.ts
world_manager/src/viewmodels/: app.ts  config.ts  discord.ts  tag_group.ts  tags.ts  world.ts
world_manager/src/views/: AddWorldForm.tsx  App.tsx  CategorySettings.tsx  Settings.tsx  SideBar.tsx  Tag.tsx  TagGroup.tsx  TopBar.tsx  WorldDialog.tsx  Worlds.tsx
