[package]
name = "world_manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "world_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
anyhow = "1.0.102"
tokio = { version = "1.52.1", features = ["full"] }
serde_derive = "1.0.228"
chrono = "0.4.44"
regex = "1.12.3"
serenity = "0.12.5"
env_logger = "0.11.10"
log = "0.4.29"
ts-rs = "12.0.1"
uuid = { version = "1.23.1", features = ["v7"] }
base64 = "0.22.1"
infer = "0.19.0"
tauri-plugin-shell = "2"
